--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "package",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --local",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.11.3"
+    "@hono/zod-validator": "^0.7.6",
+    "hono": "^4.11.3",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251229.0",
